--- a/UnityCommon/UnityCommon.csproj
+++ b/UnityCommon/UnityCommon.csproj
@@ -6,18 +6,29 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <Reference Include="JetBrains.Annotations">
+        <HintPath>..\..\ExternalLibs\JetBrains.Annotations.dll</HintPath>
+      </Reference>
       <Reference Include="Unity.Plastic.Newtonsoft.Json">
-        <HintPath>lib\Unity.Plastic.Newtonsoft.Json.dll</HintPath>
+        <HintPath>..\..\ExternalLibs\Unity.Plastic.Newtonsoft.Json.dll</HintPath>
       </Reference>
       <Reference Include="Unity.TextMeshPro">
-        <HintPath>lib\Unity.TextMeshPro.dll</HintPath>
+        <HintPath>..\..\ExternalLibs\Unity.TextMeshPro.dll</HintPath>
       </Reference>
       <Reference Include="UnityEditor">
-        <HintPath>lib\UnityEditor.dll</HintPath>
+        <HintPath>..\..\ExternalLibs\UnityEditor.dll</HintPath>
       </Reference>
       <Reference Include="UnityEngine">
-        <HintPath>lib\UnityEngine.dll</HintPath>
+        <HintPath>..\..\ExternalLibs\UnityEngine.dll</HintPath>
       </Reference>
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Logger\" />
+    </ItemGroup>
+
+    <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+      <Exec Command="copy $(TargetPath) &quot;$(SolutionDir)..&quot;" />
+    </Target>
 
 </Project>
